--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,4 @@
 *{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
     list-style: none;
     text-decoration: none;
 }
@@ -43,4 +40,25 @@ nav ul li a{
 
 .logo a{
     font-size: 40px;
+}
+
+#carrusel1, #carrusel2, #carrusel3{
+    width: 30px;
+} 
+
+body{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+h1{
+    text-align: center;
+}
+
+p{
+    font-size: 20px;
+    text-align: justify;
+}
+
+h2{
+    margin-top: 100px;
 }
